<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".fragments.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/danilla"
        android:layout_marginTop="@dimen/dp15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageUser" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/dp10"
        android:textSize="@dimen/sp16"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:layout_marginEnd="@dimen/dp15"
        android:fontFamily="@font/poppins_regular"
        android:padding="@dimen/dp10"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_login"
        app:iconTint="@color/white"
        android:textAllCaps="false"
        android:layout_margin="@dimen/dp10"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:fontFamily="@font/poppins_regular"
        android:padding="@dimen/dp10"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp10"
        app:layout_constraintStart_toEndOf="@id/btnEditProfile"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/dp15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/blue"
        android:maxLines="2"
        android:textSize="@dimen/sp16"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLanguage"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:fontFamily="@font/poppins_regular"
        android:padding="@dimen/dp10"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/japan_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_camera"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>